Modernize codebase with connection-per-use, ConfigService, builders, tests, and threading
Major changes across 10 modernization items:
- Extract ConfigService singleton from SettingsController static methods (5s cached properties)
- Replace singleton DB connection with ConnectionProvider functional interface (connection-per-use)
- Add injection constructors to all 7 DAOs and 10 services for testability
- Add 40 tests: 7 DAO test suites, ConfigService, CsvImportService, migration integration
- Decompose InsightService (828 LOC) into facade + SinglePatentAnalyzer + PortfolioAnalyzer + InsightExportService
- Decompose PatentMiningService (939 LOC) into facade + AreaExtractor + MiningExportService
- Convert models to builder pattern with final fields (Patent, Inventor, Tag, etc.)
- Convert junction models (PatentInventor, PatentTag) to records
- Adopt Java 21 features: pattern matching instanceof, getFirst()/getLast(), virtual threads
- Replace raw Thread + Platform.runLater with JavaFX Task<V> + Thread.ofVirtual() in all controllers
- Bump dependencies: JavaFX 24, sqlite-jdbc 3.49.1.0, Jackson 2.19.0, JUnit 5.12.2
- Add GitHub Actions CI workflow

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>